# feedfoundry

./: .env.example  .gitignore  AGENTS.md  README.md  ai-routing.yaml  package-lock.json  package.json
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: __init__.py  auth.py  db.py  http_errors.py  main.py  models.py  settings.py
apps/api/tests/: conftest.py  test_account_isolation.py  test_admin_agent_bundle.py  test_admin_ai_runs_visibility.py  test_admin_youtube_queue.py  test_ai_internal_policy.py  test_ai_router.py  test_ai_run_models.py  test_api_auth_errors.py  test_billing_checkout.py  test_credit_ledger.py  test_customer_copy_no_credits.py  test_env_example_file.py  test_env_validation.py  test_intake_launch_mvp.py  test_job_cancellation.py  test_job_estimator.py  test_job_states.py  test_migration_agent_bundle_enum.py  test_migration_jobstatus_enum.py  test_observability.py  test_portal_youtube_visibility.py  test_processing_time.py  test_production_deps_import.py  test_seed_dev.py  test_seed_guard.py  test_smoke_script.py  test_stripe_webhooks.py  test_upload_job_workflow.py  test_vertical_slice.py  test_visual_evidence_visibility.py  test_worker_heartbeat.py
apps/worker/: Dockerfile  ai_router_probe.py  hermes_kernel_client.py  media_inspection.py  pyproject.toml  requirements.txt  skunkworks_contract_bridge.py  worker.py  youtube_acquisition.py
apps/worker/ai/: __init__.py  canary_error_codes.py  canary_runner.py  captain.py  chunking.py  disabled_provider.py  mock_provider.py  openai_adapter.py  types.py  (+8 more)
(+280 files in other folders)
