[project]
name = "feedfoundry-worker"
version = "0.1.0"
description = "FeedFoundry processing worker"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.7.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "providers*", "ai*"]
